# northrelay-sdks

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: npm-publish.yml  python-publish.yml  typescript-publish.yml
go/: README.md
python/: IMPLEMENTATION.md  LICENSE  README.md  TEMPLATES.md  pyproject.toml
python/examples/: send_email.py  send_template.py
python/northrelay/: __init__.py  client.py  exceptions.py  types.py
python/northrelay/resources/: __init__.py  api_keys.py  brand_theme.py  campaigns.py  contacts.py  domains.py  emails.py  events.py  infrastructure.py  templates.py  webhooks.py
python/northrelay/utils/: __init__.py  http.py  retry.py
python/tests/: test_client.py  test_resources.py  test_retry.py  test_types.py
typescript/: CHANGELOG.md  PUBLISHING.md  README.md  package-lock.json  package.json  postcss.config.js  tsconfig.json  tsup.config.ts  validate-sdk.ts  vitest.config.ts
typescript/examples/: basic.ts  templates.ts  webhooks.ts
typescript/src/: client.ts  errors.ts  index.ts  types.ts  version.ts  webhooks.ts
typescript/src/__tests__/: client.test.ts
typescript/src/resources/: admin.ts  analytics.ts  api-keys.ts  brand-theme.ts  campaigns.ts  contacts.ts  domains.ts  emails.ts  events.ts  identity.ts  inbound.ts  inbox.ts  ip-pools.ts  ips.ts  keys.ts  metrics.ts  subusers.ts  suppression-groups.ts  suppressions.ts  templates.ts  webhooks.ts
typescript/src/utils/: http.ts  retry.ts
