[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "northrelay"
version = "1.1.0"
description = "Official Python SDK for NorthRelay Platform API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "NorthRelay", email = "support@northrelay.ca" }
]
keywords = [
    "northrelay",
    "email",
    "transactional-email",
    "smtp",
    "api-client",
    "sdk",
    "python",
    "fastapi",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic[email]>=2.6.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
webhooks = ["pynacl>=1.5.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://docs.northrelay.ca"
Documentation = "https://docs.northrelay.ca/sdk/python"
Repository = "https://github.com/North-Relay/northrelay-platform"
Issues = "https://github.com/North-Relay/northrelay-platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["northrelay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=northrelay",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
